style.css
* {
  margin: 0;
  padding: 0;
  font-family: "Poppins", sans-serif;
}

/* @media screen and (max-width: 768px) { */

body {
  overflow-x: hidden;
}

.header {
  background-image: url(img/image_geometry_1.png);
  background-repeat: no-repeat;
  background-size: contain;
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  align-items: center;
  height: 8vh;
}

.bar {
  display: block;
  cursor: pointer;
  width: 35px;
  height: 3px;
  margin-top: 5px;
  margin-right: 7px;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
  background-color: black;
}

.desktop_menu {
  display: none;
}

/* Hamburger Section */
.ham_menu {
  display: block;
  right: 10px;
  top: 10px;
}

.ham_menu2 .bar:nth-child(2) {
  opacity: 0;
}

.ham_menu2 .bar:nth-child(1) {
  transform: translateY(8px) rotate(45deg);
}

.ham_menu2 .bar:nth-child(3) {
  transform: translateY(-8px) rotate(-45deg);
}

#links {
  position: fixed;
  left: -100vh;
  gap: 0;
  width: 100vw;
  text-align: center;
  align-items: center;
  transition: 0.6s;
  height: 100.00vh;
  background-color: rgb(255, 255, 255);
  background-image: url("img/image_geometry_menu_top_bg.svg"),url("img/image_geometry_menu_buttom_bg.svg");
  background-size: 80%,97.5%;
  background-position: top left, bottom left;
  background-repeat: no-repeat;
  margin-top: -40px; 
}

.ham_menu2 {
  position: relative;
  display: flex;
  float: right;
  right: 18px;
  top: -15px;
}

.lang_list li {
  padding: 7px 10px;
  width: auto;
  list-style: none;
  color: #1a2236;
  background: #98dede;
  text-align: center;
  margin-right: 13px;
  text-decoration: none;
}

.all_info_containers li {
  margin-left: 22px;
  font-weight: 600;
  font-size: 1.2rem;
  line-height: 1.6em;
}

#links ul {
  padding-top: 15rem;
}

#links li {
  margin: 40px 50px;
  font-size: 16px;
  list-style: none;
  text-decoration: none;
  color: black;
}

.lang_list a,
a:focus,
a:active {
  text-decoration: none;
  color: inherit;
}

.lang_list li a:hover {
  font-size: larger;
}

#links a {
  margin: 50px auto;
  align-items: flex-start;
  font-size: 20px;
  list-style: none;
  text-decoration: none;
  color: black;
  font-family: "Poppins", sans-serif;
  font-style: normal;
}

#links.active {
  left: 0;
}

.my_name {
  color: #1a2236;
  font-family: "Playfair Display", serif;
  font-size: 50px;
  font-weight: 400;
  margin-bottom: 0;
}

.about_me {
  margin-top: 10px;
  color: #1a2236;
}

.personal-info {
  display: flex;
  flex-direction: column;
  padding: 30px 15px;
}

.start_collab {
  margin-top: 20px;
  background: black;
  color: white;
  font-size: 16px;
  padding: 12px 30px;
  width: 100%;
  border: none;
}

.start_collab:hover {
  background-color: white;
  border: 1px solid black;
  color: black;
  cursor: pointer;
}

.vector_image {
  background-size: contain;
  bottom: 0;
  height: auto;
  margin-left: 0;
  width: 98vmin;
  background-repeat: no-repeat;
}

.desk_vector {
  display: none;
}

.img-dots {
  display: none;
}

/* Projects and Card Section */

.Project_1st_name {
  margin: 30px 16px;
}

.project_list {
  width: 100%;
  display: grid;
}

.proj_1st_image {
  width: 100%;
  margin-top: -2px;
}

.proj_list_container {
  background-color: #1a2236;
  height: 156px;
  margin: 0;
  padding: 10px 0 16px 20px;
  color: white;
  flex-direction: column;
  display: flex;
  justify-content: space-evenly;
}

.proj_name {
  padding: 0;
  font-size: 24px;
  font-weight: 300;
}

.lang_list {
  display: flex;
  flex-direction: row;
  font-size: 12px;
  font-weight: 300;
  text-decoration: none;
}

.proj_view_btn {
  align-items: center;
  display: flex;
  justify-content: space-between;
  width: 29vh;
  background-color: transparent;
  color: white;
  font-size: 16px;
  padding: 9px 20px;
  border: 1px solid white;
  margin-top: 10px;
}

.proj_view_btn:hover {
  color: black;
  background-color: white;
}

.get_CV {
  margin-top: 20px;
  background: black;
  color: white;
  font-size: 16px;
  justify-content: center;
  display: flex;
  padding: 10px 26px;
  width: 100%;
  text-align: center;
}

.get_CV:hover {
  border: 1px solid black;
  color: black;
  cursor: pointer;
  background-color: white;
}

.get_CV i {
  margin-left: 15px;
}

.all_info_containers {
  color: white;
  padding: 70px;
  margin-top: 40px;
  height: 12.5rem;
}

.all_info_containers h4 {
  font-weight: 800;
  margin-bottom: 20px;
}

#langs_box {
  background: #1c528a;
  background-image: url(img/hash.svg);
  background-repeat: no-repeat;
  background-position: bottom right;
}

#frame_box {
  background: #e2505c;
  background-image: url(img/groupbox.png);
  background-repeat: no-repeat;
  background-position: bottom right;
}

#skill_box {
  background: #febf52;
  background-image: url(img/ic_skills.svg);
  background-repeat: no-repeat;
  background-position: bottom right;
}

footer {
  margin-top: 30px;
  display: flex;
  flex-direction: column;
  background-size: contain;
  width: auto;
}

.footer_nav {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  align-items: center;
  background-image: url(img/image_geometry_1.png);
  background-repeat: no-repeat;
  background-size: contain;
  height: 10vh;
}

#footer_abt {
  width: 92%;
  margin-left: 7px;
}

/* form section */

.form-1 {
  display: flex;
  flex-direction: column;
  margin-top: 32px;
  padding: 0 16px 30px 16px;
}

.form-1 .about_me {
  margin: 20px 0 30px 0;
}

.form_collab {
  margin-left: 11px;
  margin-right: 8px;
  display: flex;
  flex-direction: column;
}

.form_input {
  overflow: hidden;
  width: 100%;
  height: 7vh;
}

.list_forms .form_input {
  background: #fff;
  margin: 8px 0;
  list-style: none;
  border: 1px solid #dfdfe0;
  border-radius: 4px;
  text-decoration: none;
}

.txt_area {
  text-decoration: none;
  list-style: none;
}

.allign_center {
  text-decoration: none;
  list-style: none;
}
/* ... */

